# rust_kainore

./: .dockerignorer  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Rocket.toml  app.yaml  readme.md
src/: lib.rs  main.rs
static/css/: style.css
static/data/: data.json
templates/: footer.hbs  head.hbs  index.hbs  layout.hbs
